[package]
name = "lua-patterns"
version = "0.1.0"
authors = ["steve donovan <steve.j.donovan@gmail.com>"]
description = "Binding to Lua String Patterns"
build = "build.rs"
license = "MIT"
repository = "https://github.com/stevedonovan/lua-patterns"
documentation = "https://docs.rs/lua-patterns"

keywords = ["string","matching","lua"]

[build-dependencies]
gcc="0.3"


